# CppKit

./: .gitignore  CMakeLists.txt  README.md
docs/design_pattern/: observer.md
src/: CMakeLists.txt
src/ai/: CMakeLists.txt
src/ai/ascend/: CMakeLists.txt  ascend_env_validator.cpp  ascend_env_validator.h  ascend_env_validator_test.cpp
src/ai/broadcasting/: CMakeLists.txt  broadcasting_demo.cpp
src/ai/kernel/: CMakeLists.txt  crop.cpp  crop2.cpp  matmul.cpp
src/ai/opencl/: CMakeLists.txt  add_cl.cpp  hello_cl.cpp
src/ai/tensor_with_mmap/: CMakeLists.txt  tensor_with_mmap.fbs  tensor_with_mmap_demo.cpp  tensor_with_mmap_writer.cpp
src/ai/utils/: CMakeLists.txt  TimeElapse.cpp  TimeElapse.h
src/algorithm/: CMakeLists.txt  dag.cpp  dag.h  dag_test.cpp
src/android/: .gitignore  CMakeLists.txt  build_android.sh  test_cpp_set_thread_name.cc  test_set_thread_name.c
src/atomic/: CMakeLists.txt  test_lock_free.cpp
src/benchmark/: CMakeLists.txt  bench_demo.cpp  bench_usleep.cpp
src/blackjack/: blackjack.cpp
src/cppbase/: CMakeLists.txt  dtor_when_exit.cpp  test_variable_temp.cpp
src/cuda/: CMakeLists.txt  cuda_index.cu  cuda_sum.cu  cuda_vector_add.cu  cuda_vector_add_timing.cu  hello_cuda.cu
src/design/: CMakeLists.txt
src/design_pattern/: CMakeLists.txt
src/design_pattern/blackjack/: CMakeLists.txt
src/design_pattern/error/: CMakeLists.txt  error_test.cpp
src/design_pattern/observer/: CMakeLists.txt  water_heater_v0.cpp  water_heater_v1.cpp
src/design_pattern/register/: CMakeLists.txt  demo_register.cpp  demo_register.h  demo_register_test.cpp
src/design_pattern/timer/: CMakeLists.txt  timer.cpp  timer_test.cpp
src/error/: error.h
src/gmock_demo/: CMakeLists.txt  demo_log.cpp  demo_log.h  demo_log_test.cpp
src/how_to_optimize_gemm/: CMakeLists.txt  bm_gemm.cpp  gemm.h  gemm0.c  gemm0_ikj.c  gemm1.c  gemm2.c  gemm3.c  gemm4.c  gemm5.c  gemm6.c  gemm7.c  gemm8.c  gemm9.c  gemm_4x4_10.c  gemm_4x4_11.c  gemm_4x4_12.c  gemm_4x4_13.c  gemm_4x4_14.c  gemm_4x4_15.c  gemm_4x4_3 .c  gemm_4x4_4.c  gemm_4x4_5.c  gemm_4x4_6.c  gemm_4x4_7.c  gemm_4x4_8.c  gemm_4x4_9.c
src/linux/: CMakeLists.txt  mmap_buffer.cpp  mmap_buffer.h  mmap_buffer_test.cpp  multi_thread_fork_bug.cpp  temp_file.cpp  temp_file.h  temp_file_test.cpp
src/malloc_hook/: CMakeLists.txt  test_malloc_hook.cpp
src/matmul/: CMakeLists.txt  bench_gemm.cpp  elapsed_time.cpp  elapsed_time.h  elapsed_time_test.cpp  matmul.cpp  matmul.h  matmul_main.cpp  matmul_naive.cpp  matmul_test.cpp
src/memory_bandwidth/: CMakeLists.txt  stream.c
src/opencl/: CMakeLists.txt  README.md  hello_cl.cpp
src/opencl/examples/: CMakeLists.txt  cl_hello.cpp
src/tdd/: CMakeLists.txt  money.cpp  money.h  money_test.cpp
src/timer/: timer.cpp  timer.h
src/tinyai/: .gitattributes  CMakeLists.txt
src/tinyai/apps/: CMakeLists.txt  onnx.proto  print_onnx.cpp
src/tinyai/cmake/: protobuf.cmake
tests/: CMakeLists.txt  error_test.cpp  timer_test.cpp
