add_subdirectory(cppbase)
add_subdirectory(linux)
add_subdirectory(design_pattern)
add_subdirectory(tdd)
add_subdirectory(ai)
#add_subdirectory(malloc_hook)
add_subdirectory(matmul)
add_subdirectory(gmock_demo)
add_subdirectory(algorithm)
add_subdirectory(tinyai)
if(CPPKIT_ENABLE_CUDA)
    add_subdirectory(cuda)
endif()
