add_subdirectory(cppbase)
add_subdirectory(linux)
add_subdirectory(design_pattern)
add_subdirectory(tdd)
add_subdirectory(ai)
#add_subdirectory(malloc_hook)
add_subdirectory(matmul)
add_subdirectory(gmock_demo)
add_subdirectory(algorithm)
# add_subdirectory(tinyai)
if(CPPKIT_ENABLE_CUDA)
    add_subdirectory(cuda)
endif()

add_subdirectory(benchmark)
add_subdirectory(how_to_optimize_gemm)
add_subdirectory(memory_bandwidth)
add_subdirectory(android)
add_subdirectory(atomic)

add_subdirectory(opencl)